tests/ui/compile-fail/pinned_drop/unexpected_additional_item.stderr
error: no rules expected the token `const`
  --> tests/ui/compile-fail/pinned_drop/unexpected_additional_item.rs:10:5
   |
10 |     const BAZ: usize = 0;
   |     ^^^^^ no rules expected this token in macro call
   |
note: while trying to match `)`
  --> src/macros.rs
   |
   |         ),
   |         ^

error[E0277]: the trait bound `Foo: PinnedDrop` is not satisfied
 --> tests/ui/compile-fail/pinned_drop/unexpected_additional_item.rs:3:1
  |
3 | #[pin_data(PinnedDrop)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | the trait `PinnedDrop` is not implemented for `Foo`
  | required by a bound introduced by this call
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
